test/scc/expr/semantic-errors/168.t
void test()
{
    __offsetof(int, a);
}